force-app/main/default/objects/Receive_Payment__c/Receive_Payment__c.object-meta.xml
<CustomObject>
    <label>Receive Payment</label>
    <nameField>
        <displayFormat>RP-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receive Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>