force-app/main/default/objects/Receive_Payment__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>Supplier_Bill__c</referenceTo>
    <relationshipLabel>Receive Payments</relationshipLabel>
    <relationshipName>Receive_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>