force-app/main/default/objects/Receive_Payment__c/fields/Bill_Pay__c.field-meta.xml
<CustomField>
    <fullName>Bill_Pay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment related to purchase order</description>
    <inlineHelpText>Payment related to purchase order</inlineHelpText>
    <label>Bill Pay</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Bill Pay</relationshipLabel>
    <relationshipName>Receive_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>