force-app/main/default/objects/Receive_Payment__c/fields/Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>Receive Payments</relationshipLabel>
    <relationshipName>Receive_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>