force-app/main/default/objects/Receive_Payment__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Receive Payment Applied to Credit Memo</inlineHelpText>
    <label>Credit Memo</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credits Applied</relationshipLabel>
    <relationshipName>Receive_Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>