force-app/main/default/objects/Receive_Payment__c/fields/Credit_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_to_Account__c</fullName>
    <label>Credit to Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Irrational Raccoon</fullName>
            </value>
            <value>
                <fullName>Green Thread Property</fullName>
            </value>
            <value>
                <fullName>Green Thread Technology</fullName>
            </value>
            <value>
                <fullName>Green Thread Holdings</fullName>
            </value>
            <value>
                <fullName>Clearing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>