force-app/main/default/objects/Receive_Payment__c/fields/Excise_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Balance__c</fullName>
    <formula>Invoice__r.Excise_Tax_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excise Tax Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>