force-app/main/default/objects/Receive_Payment__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <formula>IF( RecordType.DeveloperName=&quot;Cultivation Tax&quot;, Invoice__r.Cultivation_Tax_Balance__c, Invoice__r.Invoice_Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>