force-app/main/default/objects/Receive_Payment__c/fields/Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Paid_To__c</fullName>
    <formula>Bill_Pay__r.Supplier_DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid To</label>
    <type>Text</type>
</CustomField>