force-app/main/default/objects/Receive_Payment__c/fields/Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Payment_Form__c</fullName>
    <label>Payment Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Clearing Account</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Excise Tax Deposit</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>AP-AR Netting</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Bounced Check</fullName>
            </value>
            <value>
                <fullName>Charge-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>