force-app/main/default/objects/Receive_Payment__c/fields/Payment_Memo__c.field-meta.xml
<CustomField>
    <fullName>Payment_Memo__c</fullName>
    <inlineHelpText>Enter Details About Payment If Any</inlineHelpText>
    <label>Payment Memo</label>
    <type>TextArea</type>
</CustomField>