force-app/main/default/objects/Receive_Payment__c/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date in which payment was received. Default value is today.</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>