force-app/main/default/objects/Receive_Payment__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <inlineHelpText>Finance to enter date payment was reconciled and added to general fund.</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>