force-app/main/default/objects/Receive_Payment__c/fields/Received_From__c.field-meta.xml
<CustomField>
    <fullName>Received_From__c</fullName>
    <formula>IF( Invoice__r.RecordType.DeveloperName = &quot;Tax&quot;, Invoice__r.Supplier_DBA__c, Invoice__r.Receiver_DBA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received From</label>
    <type>Text</type>
</CustomField>