force-app/main/default/objects/Receive_Payment__c/fields/Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconciled</label>
    <type>Checkbox</type>
</CustomField>