force-app/main/default/objects/Receive_Payment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <inlineHelpText>Reference to payment such as check number, confirmation number, ACH number, etc.</inlineHelpText>
    <label>Reference</label>
    <type>TextArea</type>
</CustomField>