force-app/main/default/objects/Receive_Payment__c/fields/Sell_Quote__c.field-meta.xml
<CustomField>
    <fullName>Sell_Quote__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Invoice__r.Brand_Quote__c , Invoice__r.Brand_Quote__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Quote</label>
    <type>Text</type>
</CustomField>