force-app/main/default/objects/Receive_Payment__c/fields/Total_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Received__c</fullName>
    <formula>Invoice__r.Total_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>