force-app/main/default/objects/Receive_Payment__c/recordTypes/Bad_Debt.recordType-meta.xml
<RecordType>
    <fullName>Bad_Debt</fullName>
    <active>true</active>
    <description>Bad Debt - Used When Not Collectable</description>
    <label>Bad Debt</label>
</RecordType>