force-app/main/default/objects/Receive_Payment__c/recordTypes/Bill_Pay.recordType-meta.xml
<RecordType>
    <fullName>Bill_Pay</fullName>
    <active>true</active>
    <description>Record Type for Receive Payment created from PO</description>
    <label>Bill Pay</label>
</RecordType>