force-app/main/default/objects/Receive_Payment__c/recordTypes/Clearing_Account.recordType-meta.xml
<RecordType>
    <fullName>Clearing_Account</fullName>
    <active>true</active>
    <description>Used for clearing account offsets</description>
    <label>Clearing Account</label>
</RecordType>