force-app/main/default/objects/Receive_Payment__c/recordTypes/Credit_Memo.recordType-meta.xml
<RecordType>
    <fullName>Credit_Memo</fullName>
    <active>true</active>
    <description>Credit Memo for Over Payment</description>
    <label>Credit Memo</label>
</RecordType>