force-app/main/default/objects/Receive_Payment__c/recordTypes/Cultivation_Tax.recordType-meta.xml
<RecordType>
    <fullName>Cultivation_Tax</fullName>
    <active>true</active>
    <description>Used for Cultivation Tax Payments</description>
    <label>Cultivation Tax</label>
</RecordType>