force-app/main/default/objects/Receive_Payment__c/recordTypes/Debit_Memo.recordType-meta.xml
<RecordType>
    <fullName>Debit_Memo</fullName>
    <active>true</active>
    <description>Used to Increase Invoice Amounts</description>
    <label>Debit Memo</label>
</RecordType>