force-app/main/default/objects/Receive_Payment__c/recordTypes/Deposit.recordType-meta.xml
<RecordType>
    <fullName>Deposit</fullName>
    <active>true</active>
    <description>Used for Prepayments, Deposits, and or any payments made for Services</description>
    <label>Deposit</label>
</RecordType>