force-app/main/default/objects/Receive_Payment__c/recordTypes/Excise_Tax.recordType-meta.xml
<RecordType>
    <fullName>Excise_Tax</fullName>
    <active>true</active>
    <description>Used for Excise Tax Payments</description>
    <label>Excise Tax</label>
</RecordType>