force-app/main/default/objects/Receive_Payment__c/recordTypes/Factoring.recordType-meta.xml
<RecordType>
    <fullName>Factoring</fullName>
    <active>true</active>
    <description>RP related to Factoring Invoice</description>
    <label>Factoring</label>
</RecordType>