force-app/main/default/objects/Receive_Payment__c/recordTypes/Late_Charge.recordType-meta.xml
<RecordType>
    <fullName>Late_Charge</fullName>
    <active>true</active>
    <description>Used for Late Charges and Penalty Assessments</description>
    <label>Late Charge</label>
</RecordType>