force-app/main/default/objects/Receive_Payment__c/recordTypes/Local_Cannabis_Tax.recordType-meta.xml
<RecordType>
    <fullName>Local_Cannabis_Tax</fullName>
    <active>true</active>
    <description>Local Cannabis Tax for Jurisdiction</description>
    <label>Local Cannabis Tax</label>
</RecordType>