force-app/main/default/objects/Receive_Payment__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Used for Product Payments</description>
    <label>Product</label>
</RecordType>