force-app/main/default/objects/Receive_Payment__c/recordTypes/Return_Checks.recordType-meta.xml
<RecordType>
    <fullName>Return_Checks</fullName>
    <active>true</active>
    <description>Used for Return Check Fees and Charges</description>
    <label>Return Checks</label>
</RecordType>