force-app/main/default/objects/Receive_Payment__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>Used for Services Invoice Payments</description>
    <label>Service</label>
</RecordType>