force-app/main/default/objects/Receive_Payment__c/recordTypes/Write_Off.recordType-meta.xml
<RecordType>
    <fullName>Write_Off</fullName>
    <active>true</active>
    <description>Used to write off partial amounts not collectable</description>
    <label>Write-Off</label>
</RecordType>