force-app/main/default/objects/Receive_Payment__c/listViews/X6_Received_Last_Month.listView-meta.xml
<ListView>
    <fullName>X6_Received_Last_Month</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Sell_Quote__c</columns>
    <columns>Received_From__c</columns>
    <columns>Payment_Received_Date__c</columns>
    <columns>Payment_Form__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Reference__c</columns>
    <columns>Payment_Memo__c</columns>
    <columns>Posted_Date__c</columns>
    <columns>Reconciliation_Notes__c</columns>
    <columns>Credit_to_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Received_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Receive_Payment__c.Product</value>
    </filters>
    <label>6. Received Last Month</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>